cmake_minimum_required(VERSION 2.8.4)
project(mf_insurance_hive)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Hive/Source/Database/Implementation/DatabaseMySql/DatabaseMySql.cpp
    Hive/Source/Database/Implementation/DatabaseMySql/DatabaseMySql.h
    Hive/Source/Database/Implementation/DatabaseMySql/Manifest.cpp
    Hive/Source/Database/Implementation/DatabaseMySql/QueryResultMySql.cpp
    Hive/Source/Database/Implementation/DatabaseMySql/QueryResultMySql.h
    Hive/Source/Database/Implementation/DatabaseMySql/resource.h
    Hive/Source/Database/Implementation/DatabasePostgre/DatabasePostgre.cpp
    Hive/Source/Database/Implementation/DatabasePostgre/DatabasePostgre.h
    Hive/Source/Database/Implementation/DatabasePostgre/Manifest.cpp
    Hive/Source/Database/Implementation/DatabasePostgre/postgre.h
    Hive/Source/Database/Implementation/DatabasePostgre/QueryResultPostgre.cpp
    Hive/Source/Database/Implementation/DatabasePostgre/QueryResultPostgre.h
    Hive/Source/Database/Implementation/DatabasePostgre/resource.h
    Hive/Source/Database/Implementation/ConcreteDatabase.cpp
    Hive/Source/Database/Implementation/ConcreteDatabase.h
    Hive/Source/Database/Implementation/QueryResultImpl.h
    Hive/Source/Database/Implementation/RetrySqlOp.h
    Hive/Source/Database/Implementation/SqlConnection.cpp
    Hive/Source/Database/Implementation/SqlConnection.h
    Hive/Source/Database/Implementation/SqlDelayThread.cpp
    Hive/Source/Database/Implementation/SqlDelayThread.h
    Hive/Source/Database/Implementation/SqlOperations.cpp
    Hive/Source/Database/Implementation/SqlOperations.h
    Hive/Source/Database/Implementation/SqlPreparedStatement.cpp
    Hive/Source/Database/Implementation/SqlPreparedStatement.h
    Hive/Source/Database/Implementation/SqlStatementImpl.cpp
    Hive/Source/Database/Implementation/SqlStatementImpl.h
    Hive/Source/Database/Callback.h
    Hive/Source/Database/Database.h
    Hive/Source/Database/Field.h
    Hive/Source/Database/QueryResult.h
    Hive/Source/Database/SqlStatement.h
    Hive/Source/HiveExt/DirectHiveApp.cpp
    Hive/Source/HiveExt/DirectHiveApp.h
    Hive/Source/HiveExt/Main.cpp
    Hive/Source/HiveExt/resource.h
    Hive/Source/HiveLib/DataSource/CharDataSource.cpp
    Hive/Source/HiveLib/DataSource/CharDataSource.h
    Hive/Source/HiveLib/DataSource/CustomDataSource.cpp
    Hive/Source/HiveLib/DataSource/CustomDataSource.h
    Hive/Source/HiveLib/DataSource/DataSource.h
    Hive/Source/HiveLib/DataSource/ObjDataSource.h
    Hive/Source/HiveLib/DataSource/SqlCharDataSource.cpp
    Hive/Source/HiveLib/DataSource/SqlCharDataSource.h
    Hive/Source/HiveLib/DataSource/SqlDataSource.h
    Hive/Source/HiveLib/DataSource/SqlObjDataSource.cpp
    Hive/Source/HiveLib/DataSource/SqlObjDataSource.h
    Hive/Source/HiveLib/ExtStartup.cpp
    Hive/Source/HiveLib/ExtStartup.h
    Hive/Source/HiveLib/HiveExtApp.cpp
    Hive/Source/HiveLib/HiveExtApp.h
    Hive/Source/HiveLib/Sqf.cpp
    Hive/Source/HiveLib/Sqf.h
    Hive/Source/HiveLib/Version.h
    Hive/Source/Restarter/Main.cpp
    Hive/Source/Shared/Common/Exception.h
    Hive/Source/Shared/Common/Pimpl.h
    Hive/Source/Shared/Common/PimplImpl.h
    Hive/Source/Shared/Common/Singleton.h
    Hive/Source/Shared/Common/SingletonImpl.h
    Hive/Source/Shared/Common/Timer.cpp
    Hive/Source/Shared/Common/Timer.h
    Hive/Source/Shared/Common/Types.h
    Hive/Source/Shared/Library/Database/DatabaseLoader.cpp
    Hive/Source/Shared/Library/Database/DatabaseLoader.h
    Hive/Source/Shared/Library/SharedLibraryLoader.h
    Hive/Source/Shared/Policy/Allocator.cpp
    Hive/Source/Shared/Server/Log/ArmaConsoleChannel.cpp
    Hive/Source/Shared/Server/Log/ArmaConsoleChannel.h
    Hive/Source/Shared/Server/Log/CustomLevelChannel.h
    Hive/Source/Shared/Server/Log/HiveConsoleChannel.cpp
    Hive/Source/Shared/Server/Log/HiveConsoleChannel.h
    Hive/Source/Shared/Server/AppServer.cpp
    Hive/Source/Shared/Server/AppServer.h)

add_executable(mf_insurance_hive ${SOURCE_FILES})